uploading to file to ipfs working

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -63,13 +63,24 @@
 
       <label for="choose" id="file-select">
 
-        <i class="fa fa-download fa-5x" aria-hidden="true" ></i>
+        <i class="fa fa-download fa-5x" aria-hidden="true" id="upload-icon"></i>
+
+        <!-- <i class="fa fa-files-medical" id ="upload-icon"></i> -->
+
+        <i class="fas fa-file-medical fa-5x" id="file-added" ></i>
+        <!-- <i class="fas fa-file-medical fa-5x" id="added-icon"></i> -->
 
         <!-- <span id="file-select-btn" class="btn btn-primary">Select a file</span> -->
   
         </label>
 
-      <h3>Select a File which you want to Share</h3>
+      <h3 id="before-add">Select a File which you want to Share</h3>
+
+      <h3 id="after-add"></h3>
+
+      <img src="assets/loder.gif" alt="" id ="loader">
+
+      <h3 id="pw">Please Wait, Your Transaction is being Processed</h3>
 
     </div>
 
