made ui changes

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -20,10 +20,16 @@
 
 <header>
 
-  <!-- <img src="./assets/logo.png" alt="logo" class="logo"> -->
-
+  <img src="./assets/logo-ttc.png" alt="logo" id="logo">
+<!-- 
   <nav>
       <ul class='nav-items'>
+
+        <li>
+
+       
+
+        </li>
               <li>
                       Home
               
@@ -37,7 +43,7 @@
                       Log in | Sign Up
               </li>
       </ul>
-  </nav>
+  </nav> -->
 
 </header>
 
@@ -45,8 +51,9 @@
 
   <div id="root"></div>
 
-  <h1>
-    Share your Health Records safely using Secure Share
+  <h1 id="heading">
+    Share your Health Records safely using<br>
+    <span id="secure-share">Secure Share</span>
   </h1>
 
   <!-- <img src="./assets/logo.png" alt=""> -->
