--- a/client/public/HomePage.html
+++ b/client/public/HomePage.html
@@ -9,11 +9,28 @@
 </head>
 <body>
     <div class="center">
+
+      <h2 id='random'>kopfkpkf</h2>
+
+      <a href="./index.html">fmmeee</a>
+
         <select name="sources" id="sources" class="custom-select sources" placeholder="Source Type">
-          <option value="profile">Profile</option>
+          <option value="profile" id="doc1">Geroge</option>
           <option value="word">Word</option>
           <option value="hashtag">Hashtag</option>
         </select>
       </div>
+
+
+
+      <!-- <script src="../src/sample.js"></script> -->
+
+      <!-- <script src="/static/js/bundle.js"></script> -->
+
+
+    <!-- <script src="/static/js/1.chunk.js"></script>  -->
+
+      <!-- <script src="/static/js/main.chunk.js"></script> --> -->
+
 </body>
 </html>
