--- a/client/public/index.html
+++ b/client/public/index.html
@@ -3,7 +3,11 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="./logo-small.png" type="image/x-icon" sizes="16x16">
+
+  
+
+  <!-- <link rel="shortcut icon" href="favicon.ico" type="image/x-icon"> -->
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
@@ -16,6 +20,8 @@
   <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 
   <title>Secure Share</title>
+
+  
 </head>
 
 <header>
@@ -50,6 +56,9 @@
 <body>
 
   <div id="root"></div>
+
+
+  <!-- <a href="./HomePage.html">fmeeeeee</a> -->
 
   <h1 id="heading">
     Share your Health Records safely using<br>
@@ -102,7 +111,7 @@
     </label>
 
   </div>
-  
+
   <script src="../src/index.js"></script>
 </body>
 
