--- a/client/public/selectPage.html
+++ b/client/public/selectPage.html
@@ -2,40 +2,45 @@
 <html>
 <head>
 <title>PDMS</title>
-<style>
-.center
-{
-margin: 10% 20%;
+<link rel="stylesheet" href="selectPage.css">
 
-}
-span
-{
-font-size: 30px;
-padding:10px;
-}
-select
-{
-padding: 10px 15px;
-font-size: 20px;
-width: 500px;
-}
-</style>
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+
 </head>
+
+
+
 <body>
 
 <div class="center">
+
+      <h1 id = "sel">Select the Address for File Sharing</h1>
      
         <div style="margin-left: 15px;margin-top: 10px;">
-          <span> Address : </span>
-          <select id="enter_address" value=""></select>
+          <!-- <span> Address : </span> -->
+          <select id="enter_address" value="">
+            <option value="">Dr.Alfer &nbsp &nbsp(d0xCd90395EF46b2de4410de9c189D6Cc90Badfd97b)</option>
+            <option value="">Leelavathi Hospital &nbsp &nbsp (0xF075C85332cAB52FcEf0cB3096A03c19C0578eea)</option>
+            <option value="">Dr.Kutrapali &nbsp &nbsp  (0x4A1145f8cA079A0A2d3795679975ce14A2847Ba3)</option>
+  
+
+          </select>
+         
+
         </div>
 
-        <a href="./index.html">fmeee</a>
+        <i class="fas fa-arrow-right fa-5x"></i>
+        <a href="http://localhost:3000/index.html">fee</a>
+        <h3>Click to Proceed</h3>
 
       </div>
       <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 
     <script src="web3.min.js"></script>
     <script src="app.js"></script> -->
+    <!-- <script src="../src/index.js"></script> -->
+
+    <script src="../src/sample.js"></script>
 </body>
 </html>
