working on Homepage

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -3,9 +3,11 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="shortcut icon" href="./logo-small.png" type="image/x-icon" sizes="16x16">
 
-  
+  <!-- <link rel="shortcut icon" href="logo-small.png" type="image/x-icon" sizes="20x20"> -->
+
+  <link rel="shortcut icon" href = "favicon.ico">
+
 
   <!-- <link rel="shortcut icon" href="favicon.ico" type="image/x-icon"> -->
   <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -32,8 +34,6 @@
       <ul class='nav-items'>
 
         <li>
-
-       
 
         </li>
               <li>
