--- a/client/public/HomePage.html
+++ b/client/public/HomePage.html
@@ -4,33 +4,47 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Secure Share</title>
+
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="./HomePage.css"  type="text/css">
 </head>
+
+
 <body>
-    <div class="center">
 
-      <h2 id='random'>kopfkpkf</h2>
+ 
 
-      <a href="./index.html">fmmeee</a>
+  <header>
 
-        <select name="sources" id="sources" class="custom-select sources" placeholder="Source Type">
-          <option value="profile" id="doc1">Geroge</option>
-          <option value="word">Word</option>
-          <option value="hashtag">Hashtag</option>
-        </select>
-      </div>
+    <img src="assets/logo-hp.png" alt="" id="logo">
 
+    <ul id="nav-items">
+    
 
+      <li>About Us</li>
 
-      <!-- <script src="../src/sample.js"></script> -->
+      <li>Features</li>
 
-      <!-- <script src="/static/js/bundle.js"></script> -->
+      <li>
+        <button>Log IN</button>
+      </li>
 
+      <li>
+        <button>
+          Register
+        </button>
+      </li>
 
-    <!-- <script src="/static/js/1.chunk.js"></script>  -->
+    </ul>
 
-      <!-- <script src="/static/js/main.chunk.js"></script> --> -->
+  </header>
+   
+<div id="content">
+
+</div>
 
 </body>
 </html>
