working on homepage

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -28,7 +28,8 @@
 
 <header>
 
-  <img src="./assets/logo-ttc.png" alt="logo" id="logo">
+  <img src="./assets/logo-homepage.png" alt="logo" id="logo">
+  
 <!-- 
   <nav>
       <ul class='nav-items'>
