added registration and select backend

--- a/client/public/HomePage.html
+++ b/client/public/HomePage.html
@@ -82,13 +82,32 @@
 
 <div id="features-container">
 
+  <ul id="features-items">
+    <li>
+      <img src="assets/feat/1.png" alt="">
+      <h3>Secure</h3>
+    </li>
+    <li>
+      <img src="assets/feat/2.png" alt="">
+      <h3>Efficient</h3>
+    </li>  
+    <li>
+      <img src="assets/feat/3.png" alt="">
+      <h3>Decentralized</h3>
+    </li>
+  </ul>
+</div>
 
+
+<div id="showcase">
+
+  
 
 </div>
 
 <div id="footer">
 
-  <p>Made with ❤ </p>
+  <p> Made with &#10084;&#65039;</p>
 
 </div>
 
