--- a/client/public/index.html
+++ b/client/public/index.html
@@ -113,6 +113,10 @@
 
   </div>
 
+  <script src="https://www.gstatic.com/firebasejs/8.4.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.4.1/firebase-database.js"></script>
+
+  <!-- <script src="../src/select.js"></script> -->
   <script src="../src/index.js"></script>
 </body>
 
