--- a/client/public/selectPage.html
+++ b/client/public/selectPage.html
@@ -10,7 +10,6 @@
 </head>
 
 
-
 <body>
 
 <div class="center">
@@ -19,7 +18,7 @@
      
         <div style="margin-left: 15px;margin-top: 10px;">
           <!-- <span> Address : </span> -->
-          <select id="ethereum-address" value="">
+          <select id="ethereum-address" value="" onchange="dispAddress()">
             
 
           </select>
