--- a/client/public/HomePage.html
+++ b/client/public/HomePage.html
@@ -28,7 +28,11 @@
 
       <li id="about-us">About Us</li>
 
-      <li id="features">Features</li>
+      <li id="features">
+        <a href="#features-container" >
+          Features
+        </a>
+      </li>
 
       <li>
 
