still figuering out

--- a/client/public/Register.html
+++ b/client/public/Register.html
@@ -2,12 +2,14 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Read,Write+</title>
+    <title>Secure Share</title>
   </head>
+
   <body>
     <div id="container">
 
       <div id="title_container">
+        
         <span id="content">
           <h2 class="typedtext"></h2>
         </span>
@@ -29,135 +31,7 @@
     </div>
   </body>
 
-  <style>
-    /* https://coolors.co/003049-d62828-f77f00-fcbf49-eae2b7 */
-    html, body {
-      width: 100%;
-      height: 100%;
-      background-color: #FCBF49;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
-
-    #container {
-      width: 35%;
-      height: 400px;
-
-      background-color: #fff;
-      border-radius: 10px;
-      outline: 1px solid #fff;
-      outline-offset: 3px;
-      -moz-outline-radius: 10px;
-
-    }
-
-    #title_container {
-      width: 100%;
-      height: 5%;
-
-      text-align: center;
-      float: left;
-      margin: 0;
-
-      color: #003049;
-      text-transform: uppercase;
-      font-family: Verdana;
-      font-size: 12px;
-
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      margin-top: 50px;
-      margin-bottom: 50px;
-
-      color: #003049;
-    }
-
-
-    #form_container {
-      width: 100%;
-      height: 50%;
-
-      float: left;
-      margin-top: 2px;
-      padding-left: 100px;
-      padding-right: 100px;
-
-      box-sizing: border-box;
-    }
-
-    #form_container * {
-      width: 100%;
-      height: 30px;
-
-      border: none;
-      outline: none;
-      border-left: 2px solid #003049;
-      background-color: #EBF8FF;
-      margin: 0;
-      padding: 0;
-      text-align: center;
-
-      margin-top: 3px;
-      float: left;
-
-    }
-
-    #button_container {
-      width: 100%;
-      height: 5%;
-
-      text-align: center;
-      float: left;
-      margin-bottom: 50px;
-
-      font-family: Verdana;
-
-    }
-
-    #submit {
-      width: 25%;
-      height: 35px;
-
-      background-color: #D62828;
-      border-radius: 5px;
-      font-weight: bold;
-      color: #fff;
-      border: none;
-      outline: none;
-      cursor: pointer;
-    }
-
-
-    #content {
-      width: 105px;
-      height: 100%;
-
-      margin: 0;
-      padding: 0;
-      float: left;
-
-      color: #D62828;
-      margin-right: 5px;
-    }
-
-    .typedtext {
-      display: inline-block;
-      height: 100%;
-      margin: 0;
-      padding: 0;
-
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      padding-bottom: 5px;
-      border-bottom: 2px solid #D62828;
-
-    }
-
-
-  </style>
+<!-- 
   <script>
     function typingEffect() {
       const contactTexts = shuffleArray(['SIGN', 'UP']);
@@ -212,7 +86,7 @@
 
           return array;
       }
-  </script>
+  </script> -->
 
   <script src="https://www.gstatic.com/firebasejs/8.4.1/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.4.1/firebase-database.js"></script>
