--- a/client/public/index.html
+++ b/client/public/index.html
@@ -19,7 +19,15 @@
 
   <link rel="stylesheet" href="style.css">
 
+  <!-- <script src="https://www.gstatic.com/firebasejs/8.4.1/firebase.js"></script> -->
+
+  
+  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/firebase/8.2.2/firebase-app.min.js"></script> -->
+
+
   <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+
+
 
   <title>Secure Share</title>
 
@@ -65,6 +73,12 @@
     Share your Health Records safely using<br>
     <span id="secure-share">Secure Share</span>
   </h1>
+
+  <div id="fName">
+
+    <embed type="text/html" src="testValue.html" >
+
+  </div>
 
   <!-- <img src="./assets/logo.png" alt=""> -->
 
@@ -113,11 +127,18 @@
 
   </div>
 
-  <script src="https://www.gstatic.com/firebasejs/8.4.1/firebase-app.js"></script>
   <!-- <script src="https://www.gstatic.com/firebasejs/8.4.1/firebase-database.js"></script> -->
 
   <!-- <script src="../src/select.js"></script> -->
-  <script src="../src/index.js"></script>
+  <!-- <script src="../src/fb-file.js"></script> -->
+
+  <script src="https://www.gstatic.com/firebasejs/8.4.1/firebase.js"></script>
+
+  <script  src="../src/index.js"></script>
+
+  <!-- <script src="../src/select.js"></script> -->
+
+
 </body>
 
 </html>
