--- a/client/public/selectPage.html
+++ b/client/public/selectPage.html
@@ -7,6 +7,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
 
+
 </head>
 
 
@@ -18,7 +19,7 @@
      
         <div style="margin-left: 15px;margin-top: 10px;">
           <!-- <span> Address : </span> -->
-          <select id="ethereum-address" value="" onchange="dispAddress()">
+          <select id="ethereum-address" value="">
             
 
           </select>
@@ -38,8 +39,8 @@
     <script src="app.js"></script> -->
     <!-- <script src="../src/index.js"></script> -->
 
-    <script src="https://www.gstatic.com/firebasejs/8.4.1/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.4.1/firebase-database.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.4.1/firebase.js"></script>
+    <!-- <script src="https://www.gstatic.com/firebasejs/8.4.1/firebase-database.js"></script> -->
 
 
     <script src="../src/select.js"></script>
