reading from html not working

--- a/client/public/Register.html
+++ b/client/public/Register.html
@@ -3,13 +3,14 @@
   <head>
     <meta charset="utf-8">
     <title>Secure Share</title>
+    <link rel="stylesheet" href="Register.css">
   </head>
 
   <body>
     <div id="container">
 
       <div id="title_container">
-        
+
         <span id="content">
           <h2 class="typedtext"></h2>
         </span>
