--- a/client/public/index.html
+++ b/client/public/index.html
@@ -74,11 +74,10 @@
     <span id="secure-share">Secure Share</span>
   </h1>
 
-  <div id="fName">
-
-    <embed type="text/html" src="testValue.html" >
-
+  <div id="file-name">
+    <embed src="assets/pd.txt">
   </div>
+
 
   <!-- <img src="./assets/logo.png" alt=""> -->
 
