making sc changes

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -75,7 +75,9 @@
   </h1>
 
   <div id="file-name">
-    <embed src="assets/pd.txt">
+    
+    <!-- <embed src="assets/pd.txt"> -->
+      
   </div>
 
 
@@ -135,7 +137,7 @@
 
   <script  src="../src/index.js"></script>
 
-  <!-- <script src="../src/select.js"></script> -->
+  <script src="../src/newSelect.js"></script>
 
 
 </body>
