making ui changes

--- a/client/public/Register.html
+++ b/client/public/Register.html
@@ -21,7 +21,7 @@
         <input placeholder="Email" type="email" id="email"/>
         <input placeholder="Password" type="password" id="password"/>
         <input placeholder="username" type="name" id="username"/>
-        <input placeholder="address" type="text" id="address"/>
+        <input placeholder="Ethereum Address" type="text" id="address"/>
         <input placeholder="phone" type="text" id="phone"/>
       </div>
 
@@ -91,6 +91,9 @@
 
   <script src="https://www.gstatic.com/firebasejs/8.4.1/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.4.1/firebase-database.js"></script>
+
+  <script src="//cdn.jsdelivr.net/npm/sweetalert2@10"></script>
+
 
   <script src="../src/Register.js"></script>
 
