--- a/client/public/selectPage.html
+++ b/client/public/selectPage.html
@@ -24,13 +24,16 @@
 
           </select>
          
-
         </div>
 
-        <i class="fas fa-arrow-right fa-5x"></i>
+       
 
-        <a href="http://localhost:3000/index.html">fee</a>
-        <h3>Click to Proceed</h3>
+        <a href="http://localhost:3000/index.html" target="_blank">
+            <label for="proceed-arrow" id=proceed-arrow>
+              <i class="fas fa-arrow-right fa-5x" ></i>
+              <h3>Click to Proceed</h3>
+            </label>
+        </a>
 
       </div>
       <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
