making fb changes

--- a/client/public/Register.html
+++ b/client/public/Register.html
@@ -4,6 +4,10 @@
     <meta charset="utf-8">
     <title>Secure Share</title>
     <link rel="stylesheet" href="Register.css">
+
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10.10.1/dist/sweetalert2.all.min.js"></script>
+    <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/sweetalert2@10.10.1/dist/sweetalert2.min.css'>
+
   </head>
 
   <body>
@@ -26,7 +30,7 @@
       </div>
 
       <div id="button_container">
-        <button id="submit" onclick="save()"> SUBMIT </button>
+        <button id="submit"> SUBMIT </button>
       </div>
 
     </div>
@@ -92,7 +96,7 @@
   <script src="https://www.gstatic.com/firebasejs/8.4.1/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.4.1/firebase-database.js"></script>
 
-  <script src="//cdn.jsdelivr.net/npm/sweetalert2@10"></script>
+  <!-- <script src="//cdn.jsdelivr.net/npm/sweetalert2@10"></script> -->
 
 
   <script src="../src/Register.js"></script>
