--- a/client/public/index.html
+++ b/client/public/index.html
@@ -6,7 +6,7 @@
 
   <!-- <link rel="shortcut icon" href="logo-small.png" type="image/x-icon" sizes="20x20"> -->
 
-  <link rel="shortcut icon" href = "favicon.ico">
+  <!-- <link rel="shortcut icon" href = "favicon.ico"> -->
 
 
   <!-- <link rel="shortcut icon" href="favicon.ico" type="image/x-icon"> -->
@@ -19,14 +19,8 @@
 
   <link rel="stylesheet" href="style.css">
 
-  <!-- <script src="https://www.gstatic.com/firebasejs/8.4.1/firebase.js"></script> -->
-
-  
-  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/firebase/8.2.2/firebase-app.min.js"></script> -->
-
-
-  <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
-
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10.10.1/dist/sweetalert2.all.min.js"></script>
+  <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/sweetalert2@10.10.1/dist/sweetalert2.min.css'>
 
 
   <title>Secure Share</title>
@@ -36,7 +30,11 @@
 
 <header>
 
-  <img src="./assets/logo-homepage.png" alt="logo" id="logo">
+  <a href="http://127.0.0.1:5501/client/public/Dashboard.html" style="text-decoration: none;">
+
+    <img src="./assets/logo-homepage.png" alt="logo" id="logo">
+
+  </a>
   
 <!-- 
   <nav>
