--- a/client/public/Dashboard.html
+++ b/client/public/Dashboard.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <script src="../node_modules/web3/dist/web3.min.js"></script>
+    <script src="../src/contracts/HashStorage.json"></script>
+
 </head>
 <body>
     <h1>
