making db chnges

--- a/client/public/Dashboard.html
+++ b/client/public/Dashboard.html
@@ -6,15 +6,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
+    <link rel="stylesheet" href="Dashboard.css">
+
+
     <script src="../node_modules/web3/dist/web3.min.js"></script>
     <script src="../src/contracts/HashStorage.json"></script>
 
 </head>
 <body>
-    <h1>
-        Dashboard hctib
-    </h1>
 
+    <div id="container">
+        <div id="side-nav-bar">
+
+        </div>
+    
+        <div id="dashboard-container">
+            <span id="Introduction">Welcome to Secure Share</h2>
+        </div>
+    </div>
+   
+
+    
     <script src="../src/Dashboard.js"></script>
 </body>
 </html>
