making ui changes

--- a/client/public/HomePage.html
+++ b/client/public/HomePage.html
@@ -103,13 +103,28 @@
     <li>
       <img src="assets/feat/2.png" alt="">
       <h3>Efficient</h3>
-    </li>  
+    </li>
+
     <li>
       <img src="assets/feat/3.png" alt="">
       <h3>Decentralized</h3>
     </li>
   </ul>
+
+  <ul id="features-items-2">
+    <li>
+      <img src="assets/feat/4.png" alt="">
+      <h3>Available 24x7</h3>
+    </li>
+
+    <li>
+      <img src="assets/feat/5.png" alt="">
+      <h3>Free File Storage</h3>
+    </li>
+  </ul>
+
 </div>
+
 
 
 <div id="showcase">
