--- a/client/public/Dashboard.html
+++ b/client/public/Dashboard.html
@@ -22,11 +22,14 @@
     <nav id="nav-bar">
         <ul id="nav-items">
 
-            <li id="home">Home</li>
+            <a href="../public/homePage.html" target="_blank">
+                <li id="home">Home</li>
+            </a>
+            
 
             <li id="dashboard">Dashboard</li>
 
-            <a href="http://localhost:3000/index.html">
+            <a href="../public/selectPage.html">
                 <li id="share">Start Sharing</li>
             </a>
 
@@ -46,7 +49,7 @@
         <!-- <h3 id='dash-head'>Files Shared with You</h3> -->
 
          <div id="shared-files">
-            <div class="courses-container">
+            <!-- <div class="courses-container">
                 <div class="course">
                     <div class="course-preview">
                         <h6>Details</h6>
@@ -62,7 +65,7 @@
                         <h4>Doctor Kutrapali</h4>
                         <button class="btn">Download</button>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>         
     </div>
