--- a/client/public/HomePage.html
+++ b/client/public/HomePage.html
@@ -37,7 +37,7 @@
 
       <li>
 
-        <a href="./Login.html" style="text-decoration: none;">
+        <a href="./Login.html" style="text-decoration: none;" target="_blank">
           <button id="login"></button>
 
           <label for="login" id="login">
@@ -48,7 +48,7 @@
         </a>
       </li>
 
-  <a href="./Register.html">
+  <a href="./Register.html" target="_blank">
     <li>
         <button id="register">Register</button>
         <label for="register" id="register">
