--- a/client/public/Register.html
+++ b/client/public/Register.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Secure Share</title>
+    <title>Register</title>
     <link rel="stylesheet" href="Register.css">
 
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10.10.1/dist/sweetalert2.all.min.js"></script>
